10/30/2003  version 0.1.39  Ian Lewis <IanLewis@member.fsf.org>

    * Added support for dirty files. When you make changes to a document
      it is marked dirty and has an '*' in the tab name. jsXe also asks you
      if you want to save if you have dirty documents open.
    * Fixed many miscellaneous bugs.
    * AdapterNodes notify the XMLDocument parent when changes are made to the
      DOM.

10/23/2003  version 0.1.38  Ian Lewis <IanLewis@member.fsf.org>

    * Fixed a bug that caused an error message and undesired behavior when
      removing nodes.

10/23/2003  version 0.1.37  Ian Lewis <IanLewis@member.fsf.org>

    * Fixed the problem where the parser couldn't resolve the location
      of an external entity. Made it so that the parser searched for
      the entity relative to the document's path and not the path
      where you started jsXe.
    * Changed to new versioning system so that build versions and
      major and minor version builds update jsXe's version automatically in
      the build.properties.
    * Changed SourceViewDocument to not update the XMLDocument's model each
      time you insert text but set the text only after all editing is complete.
      This improves performance but does not update the encoding when you change
      it in the properties. Since I am going to change it so that you can't edit
      the header in source view anyway, this isn't as much of an issue.

10/20/2003  version 0.1.17  Ian Lewis <IanLewis@member.fsf.org>

    * Added the ability to register listeners with the AdapterNode and
      XMLDocument interfaces.
    * Updated GUI classes to register listeners with the XMLDocuments and
      update themselves when properties change.

10/08/2003  version 0.1.16  Ian Lewis  <IanLewis@member.fsf.org>

    * Made AdapterNodes persistent. Now the JTree functions like it
      should when updateUI is called on it.

09/07/2003  version 0.1.15  Ian Lewis  <IanLewis@member.fsf.org>
